added header tag

--- a/src/index.html
+++ b/src/index.html
@@ -10,9 +10,22 @@
         <meta http-equiv="x-ua-compatible" content="ie=edge">
     </head>
     <body>
+      <header>
+        <div class="container">
+          <div id="branding">
+            <h1>Traincube</h1>
+          </div>
+          <nav>
+            <ul>
+              <li><a href="about.html">About</a></li>
+              <li><a href="programs.html">Programs</a></li>
+              <li><a href="trainee.html">Trainee</a></li>
+              <li><a href="partner.html">Partner</a></li>
+            </ul>
+          </nav>
+        </div>
+      </header>
 
-        <!-- Add your site or application content here -->
-        <p>Hello world! Traincube.</p>
 
     </body>
 </html>
