--- a/src/index.html
+++ b/src/index.html
@@ -25,7 +25,12 @@
           </nav>
         </div>
       </header>
-
+      <section id="showcase">
+        <div class="container">
+          <h1></h1>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam eu luctus ipsum, rhoncus semper magna. Nulla nec magna sit amet sem interdum condimentum.</p>
+        </div>
+      </section>
 
     </body>
 </html>
