--- a/src/index.html
+++ b/src/index.html
@@ -45,7 +45,7 @@
       <div class="container">
         <div class="box">
           <img src="./img/logo_html.png">
-          <h3>Programs</h3>
+          <h3>The Programs</h3>
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus mi augue, viverra sit amet ultricies</p>
         </div>
         <div class="box">
